[gd_scene load_steps=15 format=3 uid="uid://fsilog7v1q5h"]

[ext_resource type="Script" uid="uid://o25bip6bahdv" path="res://components/file_button.gd" id="1_rhtge"]
[ext_resource type="Texture2D" uid="uid://cgc237p3lse01" path="res://sadx out/AVA_FILESEL_E_HD/fs_file_sita_b.png" id="2_rhtge"]
[ext_resource type="PackedScene" uid="uid://crrky6xqj5jnw" path="res://components/circle_focus.tscn" id="2_wl5cg"]
[ext_resource type="Texture2D" uid="uid://cxt8122bpwys2" path="res://sadx out/AVA_CSR_HD/sphe_7.png" id="3_ne2jc"]
[ext_resource type="Texture2D" uid="uid://b8hoafdgxs0x" path="res://sadx out/AVA_CSR_HD/sphe_6.png" id="4_rhtge"]
[ext_resource type="FontFile" uid="uid://2ru8kn45as4h" path="res://sadx out/font/Roboto-VariableFont_wdth,wght.ttf" id="5_qst3f"]
[ext_resource type="FontFile" uid="uid://3x8ml0pelneb" path="res://sadx out/font/unicode.impact.ttf" id="7_qst3f"]

[sub_resource type="FontVariation" id="FontVariation_rhtge"]
base_font = ExtResource("5_qst3f")
variation_opentype = {
2003072104: 100,
2003265652: 600
}

[sub_resource type="LabelSettings" id="LabelSettings_fcwu1"]
font = SubResource("FontVariation_rhtge")
font_size = 18
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_xicbb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureBG:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 1, 1)]
}

[sub_resource type="Animation" id="Animation_p0le0"]
resource_name = "focus_flash"
length = 0.75
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureBG:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 1, 1), Color(1, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4wjwm"]
_data = {
&"RESET": SubResource("Animation_xicbb"),
&"focus_flash": SubResource("Animation_p0le0")
}

[sub_resource type="FontVariation" id="FontVariation_fu1ud"]
base_font = ExtResource("7_qst3f")
variation_transform = Transform2D(1, 0.2, 0, 1, 0, 0)
baseline_offset = 0.15

[sub_resource type="LabelSettings" id="LabelSettings_imhs7"]
font = SubResource("FontVariation_fu1ud")
font_size = 38
font_color = Color(0, 0, 0, 1)
outline_size = 7

[node name="FileButton" type="TextureButton"]
self_modulate = Color(0, 0, 1, 1)
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
pivot_offset = Vector2(32, 32)
toggle_mode = true
script = ExtResource("1_rhtge")

[node name="TextureSubBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.016
anchor_right = 1.609
anchor_bottom = 1.125
offset_left = 0.0240021
offset_right = 0.0239944
texture = ExtResource("2_rhtge")

[node name="Label" type="Label" parent="TextureSubBG"]
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 40.0
offset_right = -100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(27, 17)
text = "File"
label_settings = SubResource("LabelSettings_fcwu1")
vertical_alignment = 1

[node name="Focus" parent="." instance=ExtResource("2_wl5cg")]
visible = false
z_index = 2
layout_mode = 1
pivot_offset = Vector2(52, 28)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4wjwm")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="TextureBG" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("3_ne2jc")
expand_mode = 1

[node name="Highlight" type="TextureRect" parent="TextureBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("4_rhtge")
expand_mode = 1

[node name="Label" type="Label" parent="TextureBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
text = "   1"
label_settings = SubResource("LabelSettings_imhs7")
vertical_alignment = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_filebutton_entered"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_filebutton_exited"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
